--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Express CRUD Application</h1>
+
+            <% if(messages.success){ %>
+
+            <div class="alert alert-success"> <%= messages.success %> </div>
+            <% }%>
+
+        </div>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-4">
+                    <form action="" method="post">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" required class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" required class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="text" name="phone" id="phone" required class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" name="address" id="address" required class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-success">Add Record</button>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="col-md-8">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>S.n</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Phone</th>
+                            <th>Address</th>
+                            <th>Action</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <%
+                        users.forEach((user,key)=>{
+                        %>
+                            <tr>
+                                <td><%= ++key %></td>
+                                <td><%= user.name %></td>
+                                <td><%= user.email %></td>
+                                <td><%= user.phone %></td>
+                                <td><%= user.address %></td>
+                                <td>
+                                    <a href="/edit/<%=user.id%>">Edit</a>
+                                    <a href="/delete/<%=user.id%>">Delete</a>
+                                </td>
+
+                            </tr>
+                        <% }) %>
+
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
